# WDRProbe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTION.md  Cargo.toml  FINAL_FIX_SUMMARY.md  LICENSE-MIT  README.md  WDR_BACKEND_FIX_SUMMARY.md  WDR_PARSER_IMPLEMENTATION.md  package-lock.json  wdr_complete_parser_test.rs
.github/workflows/: pr-checks.yml  release.yml
.specify/memory/: constitution.md
Desktop/: .gitignore  IMPLEMENTATION_SUMMARY.md  PHASE4_COMPLETE.md  SOLUTION.md  TEST_GUIDE.md  UPLOAD_DEBUG.md  UPLOAD_FIX.md  debug_sql_plan.rs  index.html  package-lock.json  package.json  test_upload.html  test_wdr_parser.html  test_wdr_report.html  tsconfig.json  vite.config.ts
Desktop/frontend/: App.tsx  fix_plan_visualizer.js  types.ts  vite-env.d.ts
Desktop/frontend/components/: ErrorBoundary.tsx  Layout.tsx  PlanImportDialog.tsx  UploadDialog.tsx
Desktop/frontend/context/: I18nContext.tsx  PlanContext.tsx
Desktop/frontend/pages/: ComparisonAnalysis.tsx  Dashboard.tsx  DiagnosticRules.tsx  PlanDiff.tsx  PlanHeatmap.tsx  PlanVisualizer.tsx  PlanWaterfall.tsx  ReportDetail.tsx  ReportManagement.tsx  SqlAudit.tsx
Desktop/frontend/services/: apiService.ts
Desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
Desktop/src-tauri/docs/: API.md  PERFORMANCE.md  README.md  SUCCESS_CRITERIA_VALIDATION.md
Desktop/src-tauri/icons/: icon.icns
Desktop/src-tauri/src/: lib.rs  main.rs
Desktop/src-tauri/src/adapters/: metamorphosis_adapter.rs  mod.rs  ogexplain_adapter.rs  schema_extractor.rs
Desktop/src-tauri/src/commands/: audit.rs  comparison.rs  dashboard.rs  execution_plan.rs  export.rs  mod.rs  reports.rs  threshold.rs
Desktop/src-tauri/src/database/: operations.rs  schema.rs
Desktop/src-tauri/src/models/: comparison.rs  execution_plan.rs  export.rs  mod.rs  report.rs  threshold.rs
Desktop/src-tauri/src/parsers/: complete_wdr_parser.rs  mod.rs  sql_parser.rs
Desktop/src-tauri/src/progress/: mod.rs
Desktop/src-tauri/src/utils/: audit.rs  error.rs  gaussdb.rs  mod.rs
Desktop/src-tauri/tests/: audit_test.rs  comparison_test.rs  dashboard_test.rs  end_to_end_test.rs  execution_plan_test.rs  export_test.rs  ogexplain_integration_test.rs  parse_real_wdr_test.rs  reports_test.rs  sql_analysis_test.rs  test_comparison_algorithm.rs  test_complete_wdr_parser.rs  test_real_wdr_file.rs  test_sql_parser.rs  test_wdr_parsing.rs  threshold_test.rs
Desktop/src-tauri/tests/audit/: test_detection_rules.rs
Desktop/src-tauri/tests/integration/: test_audit.rs  test_comparison.rs  test_execution_plan.rs  test_export_import.rs  test_threshold_audit.rs
cache_io_test/: Cargo.toml
crates/wdrprobe-cli/: Cargo.toml
crates/wdrprobe-cli/src/: main.rs  output.rs
crates/wdrprobe-cli/src/commands/: analyze.rs  audit.rs  diagnose.rs  export.rs  import.rs  list.rs  mod.rs  rewrite.rs
crates/wdrprobe-core/: Cargo.toml
crates/wdrprobe-core/src/: lib.rs
crates/wdrprobe-core/src/database/: mod.rs  operations.rs  schema.rs
crates/wdrprobe-core/src/models/: audit.rs  dashboard.rs
crates/wdrprobe-core/src/parsers/: wdr_parser.rs
crates/wdrprobe-core/src/progress/: mod.rs
crates/wdrprobe-tui/: Cargo.toml
crates/wdrprobe-tui/src/: app.rs  main.rs  theme.rs
crates/wdrprobe-tui/src/components/: gauge.rs  mod.rs  tree.rs
crates/wdrprobe-tui/src/ui/: audit.rs  dashboard.rs  mod.rs  plan_view.rs  report_detail.rs  reports.rs
docs/: DeveloperGuide.md  RUST-CODING-STANDARDS.md  UserGuide.md  gaussdb.md
docs/plans/: 2026-06-13-integration-design.md
example/: opengauss_v1.html  opengauss_v2.html  test_sql_detail_wdr.html
experiments/: README.md
experiments/scripts/: test_cache_io.rs  test_wdr_parser.rs
experiments/wdr_parser_test/: Cargo.toml  wdr_parser_main.rs
specs/001-implement-desktop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-implement-desktop/checklists/: completion-status.md  requirements.md
specs/001-implement-desktop/contracts/: audit.md  comparison.md  dashboard.md  execution-plan.md  reports.md  threshold.md
