[package]
name = "wdrprobe-desktop"
version = "0.1.1"
description = "WDRProbe Desktop - Database Query Performance Analysis Tool"
authors = ["C2J"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wdrprobe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "1.8", features = [ "fs-copy-file", "fs-remove-dir", "fs-rename-file", "dialog-open", "fs-remove-file", "dialog-save", "fs-write-file", "fs-create-dir", "fs-exists", "fs-read-file", "path-all", "shell-open"] }
tauri-build = { version = "1.5" }

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
regex = "1.10"
nom = "7.1"
memmap2 = "0.9"
wdrprobe-core = { path = "../../crates/wdrprobe-core" }
ogexplain-core = { git = "https://github.com/c2j/ogexplain-analyzer", optional = true }
metamorphosis-core = { git = "https://github.com/c2j/metamorphosis", optional = true }
metamorphosis-rules = { git = "https://github.com/c2j/metamorphosis", optional = true }

# Async runtime
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing (development dependencies)
mockall = { version = "0.12", optional = true }
tempfile = { version = "3.8", optional = true }
rstest = { version = "0.18", optional = true }
criterion = { version = "0.5", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
diagnostic-engines = ["dep:ogexplain-core", "dep:metamorphosis-core", "dep:metamorphosis-rules"]
test = ["mockall", "tempfile", "rstest", "criterion"]

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
rstest = "0.18"
criterion = "0.5"
