[package]
name = "wdrprobe-tui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WDRProbe TUI — Interactive terminal WDR report browser"

[dependencies]
wdrprobe-core = { path = "../wdrprobe-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
